# infra-x

./: .gitignore  BLUEPRINT_AUTHORING.md  CHANGELOG.md  CONTRIBUTING.md  E2E_TEST_PLAN.md  LICENSE  Makefile  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  new_blueprint.md
.github/workflows/: ci.yml
infra_x/: __init__.py  backend.py  cli.py
infra_x/agent/: __init__.py  planner.py
infra_x/blueprints/: __init__.py  loader.py
infra_x/blueprints/catalog/: aws-ecs-fargate-web.yaml  aws-eks-cluster.yaml  aws-lambda-api.yaml  aws-s3-static-site.yaml  gcp-cloud-run.yaml
infra_x/ir/: __init__.py  models.py
infra_x/llm/: __init__.py  anthropic.py  base.py  ollama.py  openai.py
infra_x/render/: __init__.py  hcl.py
tests/: test_backend.py  test_blueprints.py  test_ir.py  test_llm.py  test_render.py  test_snapshots.py  test_terraform_validate.py
tests/snapshots/aws-ecs-fargate-web/: compute.tf  iam.tf  main.tf  networking.tf  observability.tf  outputs.tf  provider.tf  security.tf  variables.tf  versions.tf
tests/snapshots/aws-eks-cluster/: compute.tf  iam.tf  main.tf  networking.tf  outputs.tf  provider.tf  variables.tf  versions.tf
tests/snapshots/aws-lambda-api/: compute.tf  database.tf  iam.tf  main.tf  networking.tf  observability.tf  outputs.tf  provider.tf  security.tf  variables.tf  versions.tf
tests/snapshots/aws-s3-static-site/: cdn.tf  main.tf  outputs.tf  provider.tf  security.tf  storage.tf  variables.tf  versions.tf
tests/snapshots/gcp-cloud-run/: compute.tf  iam.tf  main.tf  outputs.tf  provider.tf  storage.tf  variables.tf  versions.tf
